# MBDELAX

./: .gitignore  CMakeLists.txt
.github/workflows/: build-windows.yml
Source/: INTEGRATION.md  MBDelaxAudioProcessor.cpp  MBDelaxAudioProcessor.h
Source/dsp/: EnvelopeFollower.h  MidSideMatrix.h  Preset53.h  ThreeBandCrossover.h  TubeSaturator.h
